2013-07-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCset.h,
	  src/SDCCset.c:
	  Improve const use in sets.

2013-07-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Better handling of register-pressure in lospre (try not to separate calculation from use).

2013-07-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCbitv.h,
	  src/SDCCbitv.c:
	  Improve const use in bit vectors.

2013-07-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc,
	  src/SDCClrange.c,
	  src/SDCClrange.h,
	  src/SDCCopt.c,
	  src/*/ralloc.c:
	  Fix handling of warnings in live-range computation for lospre.

2013-07-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Better handling of register-pressure in lospre (try not to separate condition from ifx).

2013-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Better handling of register-pressure in lospre (reduction of live-ranges of operands).

2013-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp:
	  Fix invalidation in lospre forwarding.

2013-07-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for better handling of register-pressure in lospre (reduction of live-ranges of operands).

2013-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Improve handling of register-pressure in lospre (introduced temporaries).

2013-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc:
	  Mark receive opcodes as invalidating for losrpe.

2013-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for better handling of register-pressure in lospre.

2013-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* sdccconf_in.h:
	  Regenerated to make --disable-stm8-port work.

2013-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,