@@ -40,4 +40,6 @@ void hashiCodeKeys (eBBlock **, int);
 
 void adjustIChain (eBBlock ** ebbs, int count);
 
+void separateLiveRanges (iCode *sic, ebbIndex *ebbi); /* Split iTemps that have non-connected live-ranges. */
+
 #endif
