@@ -2212,13 +2212,29 @@ eBBlockFromiCode (iCode * ic)
   adjustIChain (ebbi->bbOrder, ebbi->count);
   ic = iCodeLabelOptimize (iCodeFromeBBlock (ebbi->bbOrder, ebbi->count));
   if (optimize.lospre && (TARGET_Z80_LIKE || TARGET_HC08_LIKE || TARGET_IS_STM8)) /* Todo: enable for other ports. */
-    lospre (ic, ebbi);
+    {
+      lospre (ic, ebbi);
+      dumpEbbsToFileExt (DUMP_LOSPRE, ebbi);
+    
+
+  dumpEbbsToFileExt (DUMP_LOSPRE, ebbi);
   /* Break down again and redo some steps to not confuse live range analysis. */
   ebbi = iCodeBreakDown (ic);
   computeControlFlow (ebbi);
   loops = createLoopRegions (ebbi);
   computeDataFlow (ebbi);
 
+  recomputeLiveRanges (ebbi->bbOrder, ebbi->count, FALSE);adjustIChain (ebbi->bbOrder, ebbi->count);
+  adjustIChain (ebbi->bbOrder, ebbi->count);
+  ic = iCodeLabelOptimize (iCodeFromeBBlock (ebbi->bbOrder, ebbi->count));
+  separateLiveRanges (ic, ebbi); /* GCSE, lospre and maybe other optimizations sometimes create temporaries that have non-connected live ranges, which is bad. Split them. */
+    }
+
+  ebbi = iCodeBreakDown (ic);
+  computeControlFlow (ebbi);
+  loops = createLoopRegions (ebbi);
+  computeDataFlow (ebbi);
+    
   killDeadCode (ebbi);
 
   /* sort it back by block number */
