@@ -1,8 +1,20 @@
 2013-07-05 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/SDCClrange.c,
+	  src/SDCClrange.h,
+	  src/SDCCopt.c.
+	  src/SDCClospre.hpp:
+	  Split non-connected iTemp live-ranges.
+
+2013-07-05 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/SDCCset.h,
 	  src/SDCCset.c:
 	  Improve const use in sets.
+	* src/SDCCglobl.h,
+	  src/SDCCBBlock.c,
+	  src/SDCCopt.c:
+      Allow debug iCode dump after lospre.
 
 2013-07-04 Philipp Klaus Krause <pkk AT spth.de>
 
